--- a/referral/templates/edit.html
+++ b/referral/templates/edit.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="id_clicks" class="col-lg-2 control-label">Password</label>
+        <label for="id_clicks" class="col-lg-2 control-label">Click/label>
         <div class="col-lg-10">
           {{ form.clicks }}
         </div>
